Allow for optional types

--- a/injected/integration-test/test-pages/broker-protection/pages/form.html
+++ b/injected/integration-test/test-pages/broker-protection/pages/form.html
@@ -19,6 +19,10 @@
         <input type="text" name="first-name" id="user_first_name">
     </label>
     <label>
+        Middle Name:
+        <input type="text" name="middle-name" id="user_middle_name">
+    </label>
+    <label>
         Last Name:
         <input type="text" name="last-name" id="user_last_name">
     </label>
