Add test for path

--- a/injected/integration-test/test-pages/webcompat/pages/modify-cookies.html
+++ b/injected/integration-test/test-pages/webcompat/pages/modify-cookies.html
@@ -6,7 +6,11 @@
     <title>Modify Cookies</title>
     <link rel="stylesheet" href="../../shared/style.css">
     <script>
+        // Current file path
+        let path = '/webcompat/pages/'
         document.cookie = 'keyToBeDeleted="valueToBeDeleted"'
+        document.cookie = 'pathCookie="valueToBeDeleted"; path=' + path
+        document.cookie = 'pathCookieWithPath="valueToBeDeleted"; path=' + path
         document.cookie = 'otherKey="valueToRemain"'
     </script>
 </head>
@@ -27,11 +31,16 @@
         // eslint-disable-next-line no-undef
         test('Only specified cookies should be removed', async () => {
             const specifiedKey = hasCookie('keyToBeDeleted')
+            const pathKey = hasCookie('pathCookie')
+            const pathKey2 = hasCookie('pathCookie2')
+            const pathKey3 = hasCookie('pathCookieWithPath')
             const nonexistentKey = hasCookie('nonexistentKey')
             const otherKey = hasCookie('otherKey')
 
             return [
                 { name: 'specified cookie entry deleted', result: specifiedKey, expected: false },
+                { name: 'specified cookie entry with path not deleted', result: pathKey, expected: true },
+                { name: `specified cookie entry with correct path (${path}) deleted`, result: pathKey3, expected: false },
                 { name: 'specified cookie entry that is not present on page load', result: nonexistentKey, expected: false },
                 { name: 'other cookie entry untouched', result: otherKey, expected: true }
             ];
