--- a/injected/integration-test/test-pages/favicon/index.html
+++ b/injected/integration-test/test-pages/favicon/index.html
@@ -9,6 +9,7 @@
 <body>
 <button onclick="setOverride()">Set override</button>
 <button onclick="setManyOverrides()">Set many overrides</button>
+<button onclick="addNew()">Add new</button>
 <script>
     function setOverride() {
         document.querySelector("link[rel='shortcut icon']").href = "./new_favicon.png";
@@ -22,6 +23,12 @@
             const path = `./new_favicon.png?count=${i}`
             elem.href = path
         }
+    }
+    function addNew() {
+        const next = document.createElement('link');
+        next.rel = 'shortcut icon'
+        next.href = './new_favicon.png'
+        document.head.appendChild(next)
     }
 </script>
 </body>
