--- a/injected/integration-test/test-pages/duckplayer/pages/player-native.html
+++ b/injected/integration-test/test-pages/duckplayer/pages/player-native.html
@@ -154,22 +154,16 @@
 </template>
 <script>
     (async () => {
-        settingsFiles = {
-            default: '/duckplayer/config/overlays.json',
-            drawer: '/duckplayer/config/overlays-drawer.json',
-        }
-
         if (!new URLSearchParams(location.search).has('preview')) {
             return;
         }
         const platformName = new URLSearchParams(window.location.search).get('platform') || 'macos';
         const locale = new URLSearchParams(window.location.search).get('locale') || 'en';
-        const settingsId = new URLSearchParams(window.location.search).get('config') || 'default';
 
         await import("/build/contentScope.js").catch(console.error)
 
-        const settingsFile = settingsFiles[settingsId] || settingsFiles.default;
-        const overlays = await fetch(settingsFile).then(x => x.json())
+        const settingsFile = '/duckplayer/config/native.json';
+        const featureSettings = await fetch(settingsFile).then(x => x.json())
 
         document.dispatchEvent(new CustomEvent('content-scope-init-args', {
             detail: {
@@ -186,9 +180,7 @@
                         'duckPlayerNative'
                     ]
                 },
-                featureSettings: {
-                    duckPlayer: overlays.features.duckPlayer.settings,
-                }
+                featureSettings
             }
         }))
     })();
