--- a/injected/integration-test/test-pages/infra/pages/conditional-matching.html
+++ b/injected/integration-test/test-pages/infra/pages/conditional-matching.html
@@ -21,7 +21,7 @@
                     expected: 222
                 }
             ];
-
+            const oldPathname = window.location.pathname;
             const newUrl = new URL(window.location.href);
             newUrl.pathname = "/test/test/path";
             window.history.pushState(null, '', newUrl.href);
@@ -35,6 +35,17 @@
                 name: "APIs changing, expecting to match only when the URL is correct",
                 result: navigator.hardwareConcurrency,
                 expected: 333
+            })
+            const popStatePromise = new Promise(resolve => {
+                window.addEventListener('popstate', resolve, { once: true });
+            });
+            // Call pop state to revert the URL
+            window.history.back();
+            await popStatePromise;
+            results.push({
+                name: "Expect URL to be reverted",
+                result: window.location.pathname,
+                expected: oldPathname
             })
 
             return results;
