--- a/injected/integration-test/test-pages/infra/index.html
+++ b/injected/integration-test/test-pages/infra/index.html
@@ -10,6 +10,7 @@
     <p><a href="../../index.html">[Home]</a></p>
     <ul>
         <li><a href="./pages/conditional-matching.html">Conditional matching</a> - <a href="./config/conditional-matching.json">Config</a></li>
+        <li><a href="./pages/conditional-matching-experiments.html">Conditional matching experiments</a> - <a href="./config/conditional-matching-experiments.json">Config</a></li>
     </ul>
 </body>
 </html>
