Rename experiment feature name to be lower camelcase

--- a/injected/integration-test/test-pages/infra/pages/conditional-matching-experiments.html
+++ b/injected/integration-test/test-pages/infra/pages/conditional-matching-experiments.html
@@ -14,12 +14,12 @@
         <code>
         currentCohorts: [
             {
-                "feature": "ContentScopeExperiments",
+                "feature": "contentScopeExperiments",
                 "subfeature": "bloops",
                 "cohort": "control",
             },
             {
-                "feature": "ContentScopeExperiments",
+                "feature": "contentScopeExperiments",
                 "subfeature": "test",
                 "cohort": "treatment",
             },
