--- a/injected/integration-test/test-pages/infra/index.html
+++ b/injected/integration-test/test-pages/infra/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./pages/conditional-matching.html">Conditional matching</a> - <a href="./config/conditional-matching.json">Config</a></li>
         <li><a href="./pages/conditional-matching-experiments.html">Conditional matching experiments</a> - <a href="./config/conditional-matching-experiments.json">Config</a></li>
+        <li><a href="./pages/conditional-matching-experiments-enable.html">Conditional matching experiment enable feature</a> - <a href="./config/conditional-matching-experiments-enable.json">Config</a></li>
     </ul>
 </body>
 </html>
