chore: Add integration view for faster UI work

--- a/injected/integration-test/test-pages/hover-summarization/test.html
+++ b/injected/integration-test/test-pages/hover-summarization/test.html
@@ -12,6 +12,7 @@
             max-width: 100%;
             margin-left: 0;
             margin-right: 0;
+            padding: 1rem;
         }
     </style>
 </head>
