fix: support for relative path links and no protocols

--- a/injected/integration-test/test-pages/hover-summarization/test.html
+++ b/injected/integration-test/test-pages/hover-summarization/test.html
@@ -27,7 +27,9 @@
         <li><a href="https://www.reddit.com">Reddit</a></li>
         <li><a href="https://www.twitter.com">Twitter</a></li>
         <li><a href="https://www.facebook.com">Facebook</a></li>
-        <li><a href="https://www.instagram.com">Instagram</a></li>
+        <li><a href="https://www.apple.com/iphone/">Apple iPhone</a></li>
+        <li><a href="/iphone/">Relative Path URL</a></li>
+        <li><a href="//www.vox.com/even-better/416230/friendship-romantic-relationship-balance-jealousy">Vox no protocol</a></li>
     </ul>
 </main>
 
